--- a/BoardingHouse/packages.config
+++ b/BoardingHouse/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Angular.UI.Bootstrap" version="1.3.3" targetFramework="net452" />
+  <package id="angular-file-upload" version="12.2.5" targetFramework="net452" />
   <package id="angularjs" version="1.5.8" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="FontAwesome" version="4.6.3" targetFramework="net452" />
