--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="AccountType.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rent.cs" />
