--- a/ViewModels/ViewModels.csproj
+++ b/ViewModels/ViewModels.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RentViewModel.cs" />
     <Compile Include="ReservationViewModel.cs" />
+    <Compile Include="RoleEnum.cs" />
     <Compile Include="RoleViewModel.cs" />
     <Compile Include="RoomViewModel.cs" />
     <Compile Include="StatusViewModel.cs" />
