--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="AccountType.cs" />
+    <Compile Include="Bill.cs" />
+    <Compile Include="BillType.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rent.cs" />
