--- a/BoardingHouse/BoardingHouse.csproj
+++ b/BoardingHouse/BoardingHouse.csproj
@@ -125,8 +125,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\controllers\addBill.controller.js" />
     <Content Include="app\controllers\addUser.controller.js" />
     <Content Include="app\controllers\admin.controller.js" />
+    <Content Include="app\controllers\bills.controller.js" />
     <Content Include="app\controllers\changeProfileInfo.controller.js" />
     <Content Include="app\controllers\floor.controller.js" />
     <Content Include="app\controllers\main.controller.js" />
@@ -134,6 +136,7 @@
     <Content Include="app\controllers\reservation.controller.js" />
     <Content Include="app\controllers\roomInfo.controller.js" />
     <Content Include="app\controllers\roomInfoForPeriod.controller.js" />
+    <Content Include="app\controllers\updateStatus.controller.js" />
     <Content Include="app\controllers\userProfile.controller.js" />
     <Content Include="app\filters\filters.js" />
     <Content Include="app\filters\filterUser.js" />
@@ -143,12 +146,15 @@
     <Content Include="app\services\admin.service.js" />
     <Content Include="app\services\app.service.js" />
     <Content Include="app\services\userProfile.service.js" />
+    <Content Include="app\templetes\admin\addBill.html" />
     <Content Include="app\templetes\admin\addUser.html" />
+    <Content Include="app\templetes\admin\bills.html" />
     <Content Include="app\templetes\admin\floors.html" />
     <Content Include="app\templetes\admin\makeReservation.html" />
     <Content Include="app\templetes\admin\reservations.html" />
     <Content Include="app\templetes\admin\roomInfo.html" />
     <Content Include="app\templetes\admin\roomInfoForPeriod.html" />
+    <Content Include="app\templetes\admin\updateStatus.html" />
     <Content Include="app\templetes\admin\users.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -165,6 +171,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="image\defaultImage.png" />
+    <Content Include="image\logo.png" />
     <Content Include="image\Screenshot_6.png" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
